[tool.poetry]
name = "openweathermap"
version = "0.1.0"
description = "This is a openweathermap demo"
authors = ["Moshe Harary <mosheharary@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
requests = "^2.32.2"
datetime = "^5.5"
pandas = "^2.2.2"
pytz = "^2024.1"
timezonefinder = "^6.5.0"
ipython = "^8.24.0"
argparse = "^1.4.0"
geocoder = "^1.38.1"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
